DRAWER Prefix molecules to class names to make sure we don't accidentally overlap with styles in the app

--- a/src/components/Drawer/drawer.scss
+++ b/src/components/Drawer/drawer.scss
@@ -1,6 +1,6 @@
 @import '../../theme/variables.scss';
 
-.drawer {
+.molecules-drawer {
   font-family: $font-family;
   color: $hireology-text-gray;
   height: 100vh;
